Fixed the DataLoader courses id issue